--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
+/* global css styling */
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: Ubuntu;
+}
+body {
+  overflow-x: hidden;
+}
+ul,
+ol {
+  list-style: none;
+  padding: 0px;
+  margin: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a,
+button {
+  color: inherit;
+}
+a {
+  text-decoration: none;
+}
+button {
+  background: none;
+  cursor: pointer;
+}
+input {
+  -webkit-appearance: none;
+}
+label {
+  cursor: pointer;
+}
+input[type='placeholder'] {
+  font-family: Ubuntu;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  color: #999999;
+}
+button,
+input {
+  border: none;
 }
